// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mutations create card 1`] = `
Object {
  "data": Object {
    "addCard": Object {
      "card": Object {
        "__typename": "Card",
        "created": "2020-02-01T20:19:27.909Z",
        "description": "testing",
        "id": "ZTMwM2Y3ZTUtMTVjZS00YTVmLTkxNzktYTc1ZmZiNGY4MTkxOkNhcmQ=",
        "label": "Test Card 1",
        "number": 1,
        "updated": null,
      },
      "message": "Card Added",
      "success": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations remove card 1`] = `
Object {
  "data": Object {
    "removeCard": Object {
      "card": Object {
        "__typename": "Card",
        "created": "2020-02-01T20:19:27.909Z",
        "description": "testing",
        "id": "ZTMwM2Y3ZTUtMTVjZS00YTVmLTkxNzktYTc1ZmZiNGY4MTkxOkNhcmQ=",
        "label": "Test Card 1",
        "number": 1,
        "updated": null,
      },
      "message": "Card Removed",
      "success": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Mutations update card 1`] = `
Object {
  "data": Object {
    "updateCard": Object {
      "card": Object {
        "__typename": "Card",
        "created": "2020-02-01T20:19:27.909Z",
        "description": "testing",
        "id": "ZTMwM2Y3ZTUtMTVjZS00YTVmLTkxNzktYTc1ZmZiNGY4MTkxOkNhcmQ=",
        "label": "Test Card 1",
        "number": 1,
        "updated": null,
      },
      "message": "Card Updated",
      "success": true,
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches list of cards 1`] = `
Object {
  "data": Object {
    "cards": Object {
      "edges": Array [
        Object {
          "cursor": "Q3xjYXJkfDc1Zjc3NDczLWI3NGMtNGEyMC1hZTBkLTczZTA0YjQyN2NkZQ==",
          "node": Object {
            "__typename": "Card",
            "created": "2020-02-01T20:19:27.909Z",
            "description": "Amet autem et.",
            "id": "NzVmNzc0NzMtYjc0Yy00YTIwLWFlMGQtNzNlMDRiNDI3Y2RlOkNhcmQ=",
            "label": "sed possimus tempore",
            "number": 99999,
            "updated": "2020-02-01T20:19:27.909Z",
          },
        },
        Object {
          "cursor": "Q3xjYXJkfDc4NTU1YTkwLWY2OGItNDU0Yy1iZWIyLWU3MDIxZjNkOGM2Mw==",
          "node": Object {
            "__typename": "Card",
            "created": "2020-02-01T23:03:03.942Z",
            "description": "Odit officia esse hic qui est perspiciatis.",
            "id": "Nzg1NTVhOTAtZjY4Yi00NTRjLWJlYjItZTcwMjFmM2Q4YzYzOkNhcmQ=",
            "label": "necessitatibus id error",
            "number": 99995,
            "updated": "2020-02-01T23:03:03.942Z",
          },
        },
        Object {
          "cursor": "Q3xjYXJkfGNhZjM4YjMxLWU1NTEtNDMzYi1iMWIwLWM2NTgwN2U5NzkyNw==",
          "node": Object {
            "__typename": "Card",
            "created": "2020-02-02T04:59:07.272Z",
            "description": "Et in sequi eum enim ratione.",
            "id": "Y2FmMzhiMzEtZTU1MS00MzNiLWIxYjAtYzY1ODA3ZTk3OTI3OkNhcmQ=",
            "label": "doloribus explicabo explicabo",
            "number": 99974,
            "updated": "2020-02-02T04:59:07.272Z",
          },
        },
      ],
      "pageInfo": Object {
        "endCursor": "Q3xjYXJkfGNhZjM4YjMxLWU1NTEtNDMzYi1iMWIwLWM2NTgwN2U5NzkyNw==",
        "hasNextPage": true,
        "hasPreviousPage": false,
        "startCursor": "Q3xjYXJkfDc1Zjc3NDczLWI3NGMtNGEyMC1hZTBkLTczZTA0YjQyN2NkZQ==",
        "totalCount": 10000,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches single card 1`] = `
Object {
  "data": Object {
    "card": Object {
      "__typename": "Card",
      "created": "2020-02-01T20:19:27.909Z",
      "description": "testing",
      "id": "ZTMwM2Y3ZTUtMTVjZS00YTVmLTkxNzktYTc1ZmZiNGY4MTkxOkNhcmQ=",
      "label": "Test Card 1",
      "number": 1,
      "updated": "2020-02-01T20:19:27.909Z",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
